--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-        <title>Backoffice</title>
+        <title>System</title>
 		<meta charset="utf-8">
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<meta name="description" content="A web application with unlimited number of modules distributed on different static web servers around the world and maintained by different people with different skills">
